unpackaged/main/default/objects/Opportunity/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <formula>TEXT(Account.Informatics_Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Territory</label>
    <type>Text</type>
</CustomField>