unpackaged/main/default/objects/Opportunity/fields/ACSG_AI_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACSG_AI_Amount__c</fullName>
    <formula>Amount  +  PAF_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACSG + AI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>