unpackaged/main/default/objects/Opportunity/fields/Additional_Yrs_Software_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Additional_Yrs_Software_Maintenance__c</fullName>
    <label>Additional Yrs Software Maintenance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>