unpackaged/main/default/objects/Opportunity/fields/ADS_Count__c.field-meta.xml
<CustomField>
    <fullName>ADS_Count__c</fullName>
    <inlineHelpText>Number of new ads orders to be added</inlineHelpText>
    <label>ADS Orders Incoming</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>