unpackaged/main/default/objects/Opportunity/fields/ADS_Order__c.field-meta.xml
<CustomField>
    <fullName>ADS_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox that will be populated by workflow whenever additional downloads/meters projects are created. This field will be used as a filter for list views and reports.</description>
    <label>ADS Order</label>
    <type>Checkbox</type>
</CustomField>