unpackaged/main/default/objects/Opportunity/fields/ADS_Order_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ADS_Order_Adjustment__c</fullName>
    <inlineHelpText>The amount of ADS orders to charge the customer based on support tier.</inlineHelpText>
    <label>ADS Order Adjustment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>