unpackaged/main/default/objects/Opportunity/fields/Aegis_POC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Aegis_POC_Notes__c</fullName>
    <description>Field to track Aegis shorthand codes used for contracts and configuration records</description>
    <label>Aegis POC Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>