unpackaged/main/default/objects/Opportunity/fields/Aegis_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Aegis_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aegis Prospect</label>
    <referenceTo>Aegis_Prospect__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>