unpackaged/main/default/objects/Opportunity/fields/Alere_Paid_Fees_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Alere_Paid_Fees_Annualized__c</fullName>
    <formula>Vendor_Contribution_to_License_Fees__c  /  License_Term_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alere Paid Fees Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>