unpackaged/main/default/objects/Opportunity/fields/Alere_System_lookup__c.field-meta.xml
<CustomField>
    <fullName>Alere_System_lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>lookup relationship to link opportunity information to the RALS System record</description>
    <label>Installation #</label>
    <referenceTo>RALS_System__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>