unpackaged/main/default/objects/Opportunity/fields/Annual_License_Value_From_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_License_Value_From_Contract__c</fullName>
    <description>Formula that brings in the Annual Value of Contract as identified on the contract record</description>
    <formula>Contract.Annual_Value_of_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual License Value From Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>