unpackaged/main/default/objects/Opportunity/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <description>Custom fiel d created to annualize amounts of opportunities.  Can be used to determine how much customers are spending with us on an annual average.  Will also be used to annualize the lost revenue when we lose business (we are required to report that to Alere each month)</description>
    <formula>IF 
( OR( License_Term_Years__c=0 ,ISBLANK(License_Term_Years__c)),Amount,License_Fees__c / License_Term_Years__c)</formula>
    <label>Annualized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>