unpackaged/main/default/objects/Opportunity/fields/Annualized_Amount_Alere_Paid_Annualize__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount_Alere_Paid_Annualize__c</fullName>
    <formula>Alere_Paid_Fees_Annualized__c  +  Annualized_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Amount+Alere Paid Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>