unpackaged/main/default/objects/Opportunity/fields/Annualized_Amount_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount_Rounded__c</fullName>
    <description>Formula field to round the annualized amount to the nearest dollar</description>
    <formula>ROUND( Annualized_Amount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Amount*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>