unpackaged/main/default/objects/Opportunity/fields/Annualized_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Implementation__c</fullName>
    <formula>Annualized_Amount__c  +  Implementation_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized + Implementation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>