unpackaged/main/default/objects/Opportunity/fields/Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to capture the user who sent a opportunity record into approval.   In the case of Quote and License approval, the approval submitter is the sales persion who requested the license (since the contract person who performs the actions is the submitter)</description>
    <label>Approval Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvals_Submitted</relationshipName>
    <type>Lookup</type>
</CustomField>