unpackaged/main/default/objects/Opportunity/fields/At_Risk_Due_to_Roche_Issue__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Due_to_Roche_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will capture which opportunities are at Risk due to Roche Inform II problem.  Reporting on such field will quantify what revenue (not just Roche Glucose licenses) are at risk</description>
    <label>At Risk Due to Roche I2 Issue</label>
    <type>Checkbox</type>
</CustomField>