unpackaged/main/default/objects/Opportunity/fields/Audit_Concern__c.field-meta.xml
<CustomField>
    <fullName>Audit_Concern__c</fullName>
    <description>Field to document what should be corrected to eliminate Audit risk</description>
    <label>Audit Concern</label>
    <type>TextArea</type>
</CustomField>