unpackaged/main/default/objects/Opportunity/fields/Audit_Risk__c.field-meta.xml
<CustomField>
    <fullName>Audit_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will document any opportunities that didn't follow usual process opening us up for issues in  an audit etc...</description>
    <label>Audit Risk</label>
    <type>Checkbox</type>
</CustomField>