unpackaged/main/default/objects/Opportunity/fields/Automation_Run_Edit_Record__c.field-meta.xml
<CustomField>
    <fullName>Automation_Run_Edit_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to cause automation processes to run on edit, without changing any other details within the record.</description>
    <inlineHelpText>Used to cause automation processes to run on edit, without changing any other details within the record.</inlineHelpText>
    <label>Automation Run Edit Record</label>
    <type>Checkbox</type>
</CustomField>