unpackaged/main/default/objects/Opportunity/fields/Backlog_Date_of_Cancellation_Review__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Date_of_Cancellation_Review__c</fullName>
    <description>Field will document the date that legal needs to review the order cancellation, to see if they heard back from the customer after they were sent a cancellation notice</description>
    <formula>Backlog_Order_Cancellation_Notice_Sent__c  + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Date of Cancellation Review</label>
    <type>Date</type>
</CustomField>