unpackaged/main/default/objects/Opportunity/fields/Backlog_Order_Cancellation_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Order_Cancellation_Notice_Sent__c</fullName>
    <description>Will track the date the backlog project cancellation orders are sent</description>
    <label>Backlog Order Cancellation Notice Sent</label>
    <type>Date</type>
</CustomField>