unpackaged/main/default/objects/Opportunity/fields/Backlog_Order_Wave__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Order_Wave__c</fullName>
    <label>Backlog Order Wave</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>