unpackaged/main/default/objects/Opportunity/fields/Backlog_Project_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Project_Pathway__c</fullName>
    <formula>CASE( Backlog_Project_Step__c, 
"1", "No Pathway Yet - In Qualification", 
"C2", "Cancellation",
"C3", "Cancellation",
"C4", "Cancellation",
"C4R", "No Pathway Yet - In Qualification",
"C5", "Cancellation",
"C5R", "No Pathway Yet - In Qualification",
"C6", "Cancellation",
"C6R", "No Pathway Yet - In Qualification",
"C7", "Cancellation",
"C8", "Cancellation",
"END", "Returned to Operations",

"Moving Forward With Order")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog Project Pathway</label>
    <type>Text</type>
</CustomField>