unpackaged/main/default/objects/Opportunity/fields/Backlog_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Project_Status__c</fullName>
    <label>Backlog Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification of Backlog Order</fullName>
            </value>
            <value>
                <fullName>Marked For Cancellation - Return to Sales</fullName>
            </value>
            <value>
                <fullName>Order Moving Forward</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Implementation Scheduled to Move Forward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>