unpackaged/main/default/objects/Opportunity/fields/Backlog_Project_Step__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Project_Step__c</fullName>
    <description>Field will be used to track steps in backlog project.  Will be populated via workflow within approval processes</description>
    <label>Backlog Project Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C1R</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C3R</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C4R</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C5.5</fullName>
            </value>
            <value>
                <fullName>C5R</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>C6R</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>C8</fullName>
            </value>
            <value>
                <fullName>F2</fullName>
            </value>
            <value>
                <fullName>F2.5</fullName>
            </value>
            <value>
                <fullName>F2R</fullName>
            </value>
            <value>
                <fullName>F3</fullName>
            </value>
            <value>
                <fullName>F3R</fullName>
            </value>
            <value>
                <fullName>F4</fullName>
            </value>
            <value>
                <fullName>F4R</fullName>
            </value>
            <value>
                <fullName>F5</fullName>
            </value>
            <value>
                <fullName>F5R</fullName>
            </value>
            <value>
                <fullName>F6</fullName>
            </value>
            <value>
                <fullName>F6R</fullName>
            </value>
            <value>
                <fullName>F7</fullName>
            </value>
            <value>
                <fullName>Returned to Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>