unpackaged/main/default/objects/Opportunity/fields/Backlog_Wave_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Wave_Assignment_Date__c</fullName>
    <description>Field will track the date a backlogged order has been assigned to a wave and released to Sales for qualification</description>
    <label>Backlog Wave Assignment Date</label>
    <type>Date</type>
</CustomField>