unpackaged/main/default/objects/Opportunity/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>