unpackaged/main/default/objects/Opportunity/fields/Billing_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Milestone_Date__c</fullName>
    <description>Field that will track when an associated project reaches a milestone so it can be billed.</description>
    <label>Billing Milestone Date For Projects</label>
    <type>Date</type>
</CustomField>