unpackaged/main/default/objects/Opportunity/fields/Cancellation_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Scenario__c</fullName>
    <label>Cancellation Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled By Sales, No Project</fullName>
                <label>Opportunity Cancelled, No Project</label>
            </value>
            <value>
                <fullName>Cancelled By Sales After Project Cancelled</fullName>
                <label>Opportunity Cancelled, Project Cancelled</label>
            </value>
            <value>
                <fullName>Project Cancelled, Sales Not Decided Yet</fullName>
                <label>Opportunity Cancellation in Approval,  Project Cancelled</label>
            </value>
            <value>
                <fullName>Project Cancelled, Backlog/Zombie Project</fullName>
            </value>
            <value>
                <fullName>Opportunity Cancelled, Project Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>