unpackaged/main/default/objects/Opportunity/fields/Candidate_for_Web3_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Candidate_for_Web3_Conversion__c</fullName>
    <formula>Account.Candidate_for_Web3_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate for Web3 Conversion</label>
    <type>Checkbox</type>
</CustomField>