unpackaged/main/default/objects/Opportunity/fields/CLIA_Waver__c.field-meta.xml
<CustomField>
    <fullName>CLIA_Waver__c</fullName>
    <label>CLIA# / Waver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>