unpackaged/main/default/objects/Opportunity/fields/Close_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Month_End_Date__c</fullName>
    <formula>IF( 
MONTH(CloseDate) = 12, 
DATE( YEAR( CloseDate), 12, 31 ), 
DATE( YEAR(CloseDate), MONTH (CloseDate ) + 1, 1 ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month End Date</label>
    <type>Date</type>
</CustomField>