unpackaged/main/default/objects/Opportunity/fields/Close_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Month_Year__c</fullName>
    <formula>TEXT( Closed_Month__c)+"-"+TEXT(Closed_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month Year</label>
    <type>Text</type>
</CustomField>