unpackaged/main/default/objects/Opportunity/fields/Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Details__c</fullName>
    <description>Text area to capture additional information about a deal we lost.  Details will be required in certain scenarios such as when we lose to competition, when we select "other" etc....</description>
    <label>Closed Lost Details</label>
    <type>TextArea</type>
</CustomField>