unpackaged/main/default/objects/Opportunity/fields/Closed_Quarter_Year__c.field-meta.xml
<CustomField>
    <fullName>Closed_Quarter_Year__c</fullName>
    <formula>TEXT( Closed_Year__c )  +  Fiscal_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Quarter/Year</label>
    <type>Text</type>
</CustomField>