unpackaged/main/default/objects/Opportunity/fields/Closed_Year_In_Text__c.field-meta.xml
<CustomField>
    <fullName>Closed_Year_In_Text__c</fullName>
    <formula>TEXT( Closed_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Transaction</label>
    <type>Text</type>
</CustomField>