unpackaged/main/default/objects/Opportunity/fields/CloseDate_Week_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>CloseDate_Week_Of_Year__c</fullName>
    <formula>MOD(FLOOR( (CloseDate ) - DATE(2006,01,01))/7,52)+1</formula>
    <label>Week Of Year CloseDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>