unpackaged/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Field to track which competitors hospitals are choosing to use for data management</description>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telcor QML, Quick Link, or Data Link</fullName>
            </value>
            <value>
                <fullName>Pweb</fullName>
            </value>
            <value>
                <fullName>Cobas IT</fullName>
            </value>
            <value>
                <fullName>Data Manager Software that comes with device</fullName>
            </value>
            <value>
                <fullName>Other (Include in Notes)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>