unpackaged/main/default/objects/Opportunity/fields/Connectivity_Platform__c.field-meta.xml
<CustomField>
    <fullName>Connectivity_Platform__c</fullName>
    <formula>Contract__r.Connectivity_Platform_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>