unpackaged/main/default/objects/Opportunity/fields/Contingent_Term__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Term__c</fullName>
    <inlineHelpText>Use for contingent term in days ex. 90, 120</inlineHelpText>
    <label>Contingent Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>