unpackaged/main/default/objects/Opportunity/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <formula>Contract__r.License_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>