unpackaged/main/default/objects/Opportunity/fields/Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration__c</fullName>
    <description>Field to display the contract expiration date from associated contract</description>
    <formula>Contract__r.License_Expiration_Date__c</formula>
    <label>Contract Expiration</label>
    <type>Date</type>
</CustomField>