unpackaged/main/default/objects/Opportunity/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>Field to capture the ID of the corresponding contract record, used for data management manual updates etc...   Will be blind to all but Sys Admin Profile</description>
    <formula>Contract__r.Id</formula>
    <label>Contract ID</label>
    <type>Text</type>
</CustomField>