unpackaged/main/default/objects/Opportunity/fields/Contract_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Initiated__c</fullName>
    <label>Contract Initiated</label>
    <type>Date</type>
</CustomField>