unpackaged/main/default/objects/Opportunity/fields/Contract_Needs_To_Be_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Needs_To_Be_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Needs To Be Terminated</label>
    <type>Checkbox</type>
</CustomField>