unpackaged/main/default/objects/Opportunity/fields/Countersigned_Has_Been_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Countersigned_Has_Been_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that will track if Contracts Administrator has Uploaded Countersigned Agreement.   Will trigger workflow to have Account reps forward the countersigned agreements to the right person</description>
    <label>Countersigned Has Been Uploaded</label>
    <type>Checkbox</type>
</CustomField>