unpackaged/main/default/objects/Opportunity/fields/Covid_Volume__c.field-meta.xml
<CustomField>
    <fullName>Covid_Volume__c</fullName>
    <label>Covid Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>