unpackaged/main/default/objects/Opportunity/fields/Created_Date_Not_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Not_Time__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Not Time</label>
    <type>Date</type>
</CustomField>