unpackaged/main/default/objects/Opportunity/fields/Created_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Created_Quarter__c</fullName>
    <formula>CASE( Created_Month__c , 
1, "Q1",
2, "Q1",
3, "Q1",
4, "Q2",
5, "Q2",
6, "Q2",
7, "Q3",
8, "Q3",
9, "Q3",
10,"Q4",
11,"Q4",
12,"Q4"," ")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Quarter</label>
    <type>Text</type>
</CustomField>