unpackaged/main/default/objects/Opportunity/fields/Created_Year_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Created_Year_Quarter__c</fullName>
    <formula>TEXT(YEAR( Created_Date_Not_Time__c ))&amp;"-"&amp;Created_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Year-Quarter</label>
    <type>Text</type>
</CustomField>