unpackaged/main/default/objects/Opportunity/fields/Creation_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Month_End_Date__c</fullName>
    <formula>IF( 
MONTH(  Created_Date_Not_Time__c  ) = 12, 
DATE( YEAR( Created_Date_Not_Time__c ), 12, 31 ), 
DATE( YEAR(Created_Date_Not_Time__c  ), MONTH ( Created_Date_Not_Time__c ) + 1, 1 ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Month End Date</label>
    <type>Date</type>
</CustomField>