unpackaged/main/default/objects/Opportunity/fields/Customer_Expectation_Project_Completion__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation_Project_Completion__c</fullName>
    <description>Field to track the customer's expectation of when the project will be completed.  Will be used to manage customer's expectations as well as assign projects</description>
    <label>Customer Expectation -Project Completion</label>
    <type>Date</type>
</CustomField>