unpackaged/main/default/objects/Opportunity/fields/Customer_Expectation_Project_Start__c.field-meta.xml
<CustomField>
    <fullName>Customer_Expectation_Project_Start__c</fullName>
    <description>Field to capture the customers expectation of when the project should begin.  Will be used internally to manage expectations and assign projects</description>
    <label>Customer Expectation - Project Start</label>
    <type>Date</type>
</CustomField>