unpackaged/main/default/objects/Opportunity/fields/Customer_Has_Test_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_Has_Test_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to document if a customer has a test system or not. Will contribute to total project complexity score</description>
    <label>* Customer Has Test System</label>
    <type>Checkbox</type>
</CustomField>