unpackaged/main/default/objects/Opportunity/fields/Customer_Name_On_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_On_Contract__c</fullName>
    <formula>Contract.Legal_Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name On Contract</label>
    <type>Text</type>
</CustomField>